# gsqlite

./: LICENSE  README.md  setup.cfg
gsqlite3/: __init__.py  c_sqlite3.py  utils.py
src/gsqlite/: __init__.py  c_sqlite3.py  connection.py  constants.py  cursor.py  cursor_description_mixin.py  cursor_execution_layer.py  cursor_fetching_layer.py  cursor_iterator.py  cursor_lastrowid_mixin.py  description.py  exceptions.py  lastrowid.py  types.py  utils.py
src/gsqlite3/: cursor.py
test/unit/: test_cursor.py  test_threading.py  utils.py
