[metadata]
name = gsqlite3
version = 0.0.1
author = Heorhii Torianyk
author_email = deadstonepro@gmail.com
description = DBAPI 2.0 implementation for sqlite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/htorianik/gsqlite3
project_urls =
    Bug Tracker = https://github.com/htorianik/gsqlite3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src